fixed page readability.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
 img {
   width: 400px;
 }
+body {
+  background-color: rgb(201, 174, 226);
+  color: white;
+}
